--- a/Web/multitracks.com/multitracks.com/Web.config
+++ b/Web/multitracks.com/multitracks.com/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="admin" connectionString="[SQLConnectionStringHere]" />
+		<add name="admin" connectionString="Data Source=localhost\SQLExpress;Initial Catalog=MultiTracks;Integrated Security=True;" />
 	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
