--- a/Web/multitracks.com/multitracks.com/Web.config
+++ b/Web/multitracks.com/multitracks.com/Web.config
@@ -7,9 +7,17 @@
 	<connectionStrings>
 		<add name="admin" connectionString="Data Source=localhost\SQLExpress;Initial Catalog=MultiTracks;Integrated Security=True;" />
 	</connectionStrings>
+	<system.webServer>
+		<defaultDocument enabled="true">
+			<files>
+				<add value="views/default/default.aspx" />
+			</files>
+		</defaultDocument>
+	</system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+	  
   </system.web>
   <system.codedom>
     <compilers>
