--- a/Web/multitracks.com/multitracks.com/Web.config
+++ b/Web/multitracks.com/multitracks.com/Web.config
@@ -4,9 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
-		<add name="admin" connectionString="[SQLConnectionStringHere]" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="admin" connectionString="Data Source=JOHN_KEHINDE;Initial Catalog=MultiTracksDB;Persist Security Info=True;User ID=sa;Password=kehindejohn" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
