--- a/multitracks.com.api/multitracks.com.api.csproj
+++ b/multitracks.com.api/multitracks.com.api.csproj
@@ -130,14 +130,18 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ArtistController.cs" />
+    <Compile Include="Controllers\SongController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Dtos\ArtistDto.cs" />
+    <Compile Include="Models\Dtos\AddArtistDto.cs" />
+    <Compile Include="Models\Dtos\GetArtistDto.cs" />
     <Compile Include="Models\Dtos\SongDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Implementation\ArtistRepository.cs" />
+    <Compile Include="Repository\Implementation\SongRepository.cs" />
     <Compile Include="Repository\Interface\IArtistRepository.cs" />
+    <Compile Include="Repository\Interface\ISongRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
